# complx

./: .appveyor.yml  .clang-tidy  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  ComplxChangeLog.txt  Dockerfile  Makefile  PKGBUILD  README-BUILD-INSTRUCTIONS.txt  README.md  complx-tools-config.cmake  complx-tools.odt  complx.desktop  configure  install.sh  install_script_fedora23.sh  install_script_fedora_21.sh  install_script_ubuntu_13_10.sh  run_docker.sh
comp/: CMakeLists.txt  Makefile  commands.cpp  commands.hpp  comp.cpp  comp.hpp  comp.l  comp.y  curses.cpp  curses.hpp  main.cpp  readme.txt  windows.cpp  windows.hpp
complx/: AddressDialog.cpp  AddressDialog.fbp  AddressDialog.hpp  AddressDialogDecl.cpp  AddressDialogDecl.h  AdvancedLoadDialog.cpp  AdvancedLoadDialog.fbp  AdvancedLoadDialog.hpp  AdvancedLoadDialogDecl.cpp  AdvancedLoadDialogDecl.h  BreakpointDialog.cpp  BreakpointDialog.fbp  BreakpointDialog.hpp  BreakpointDialogDecl.cpp  BreakpointDialogDecl.h  CMakeLists.txt  CallStackDialog.cpp  CallStackDialog.fbp  CallStackDialog.hpp  CallStackDialogDecl.cpp  CallStackDialogDecl.h  CallSubroutineDialog.cpp  CallSubroutineDialog.fbp  CallSubroutineDialog.hpp  CallSubroutineDialogDecl.cpp  CallSubroutineDialogDecl.h  Complx.fbp  ComplxApp.cpp  ComplxApp.hpp  ComplxFrame.cpp  ComplxFrame.hpp  ComplxFrameDecl.cpp  ComplxFrameDecl.h  DebugInfoDialog.cpp  DebugInfoDialog.fbp  DebugInfoDialog.hpp  DebugInfoDialogDecl.cpp  DebugInfoDialogDecl.h  DebugInfoList.cpp  DebugInfoList.hpp  (+50 more)
complx/builder/: ComplxFrameDecl.fbp
complx/data/: Lc3BinaryDisplayData.cpp  Lc3BinaryDisplayData.hpp  MemoryViewBinaryDataRenderer.cpp  MemoryViewBinaryDataRenderer.hpp  MemoryViewDataModel.cpp  MemoryViewDataModel.hpp  MemoryViewInfoDataRenderer.cpp  MemoryViewInfoDataRenderer.hpp  MemoryViewInfoState.hpp  ProcessStatusRegisterProperty.cpp  ProcessStatusRegisterProperty.hpp  RegisterProperty.cpp  RegisterProperty.hpp  RegisterPropertyGridItems.cpp  RegisterPropertyGridItems.hpp
complx/util/: GuiConstants.cpp  GuiConstants.hpp  ValidationHelper.cpp
lc3edit/wxScintilla/: Makefile.am
lc3edit/wxScintilla/src/: PlatWX.h  ScintillaWX.cpp
lc3test/: CMakeLists.txt  Makefile  ResultEmitter.h  TextResultEmitter.cpp  TextResultEmitter.h  XmlResultEmitter.cpp  XmlResultEmitter.h  XmlTestParser.cpp  XmlTestParser.hpp  main.cpp
liblc3/: CMakeLists.txt  ExpressionEvaluator.cpp  ExpressionEvaluator.hpp  Makefile  lc3.cpp  lc3.hpp  lc3_all.hpp  lc3_assemble.cpp  lc3_assemble.hpp  lc3_cmp.cpp  lc3_cmp.hpp  lc3_debug.cpp  lc3_debug.hpp  lc3_execute.cpp  lc3_execute.hpp  lc3_expressions.cpp  lc3_expressions.hpp  lc3_os.cpp  lc3_os.hpp  lc3_osv2.cpp  lc3_params.cpp  lc3_params.hpp  lc3_parser.cpp  lc3_parser.hpp  lc3_plugin.cpp  lc3_plugin.hpp  lc3_runner.cpp  lc3_runner.hpp  lc3_symbol.cpp  lc3_symbol.hpp  lc3_test.cpp  lc3_test.hpp  liblc3.cbp  main.cpp
plugins/devices/: CMakeLists.txt
plugins/devices/random/: random.cpp  random.hpp
plugins/devices/second_timer/: second_timer.hpp
plugins/devices/timer/: timer.cpp  timer.hpp
plugins/instructions/: CMakeLists.txt
plugins/instructions/multiply/: multiply.cpp  multiply.hpp
plugins/other/: CMakeLists.txt
plugins/other/bwlcd/: bwlcd.cpp  bwlcd.hpp  bwlcdgui.cpp  bwlcdgui.h
plugins/other/colorlcd/: colorlcd.cpp  colorlcd.fbp  colorlcd.hpp  colorlcdgui.cpp  colorlcdgui.h
plugins/other/pinger/: pinger.cpp  pinger.hpp
plugins/traps/: CMakeLists.txt
plugins/traps/udiv/: udiv.cpp  udiv.hpp
pylc3/: CMakeLists.txt  PyLC3.cpp  PyLC3.hpp  __init__.py  pylc3_generator.py  requirements-build.txt  requirements.txt
pylc3/cli/: comp.py  comp_test.py
pylc3/unittest/: lc3_unit_test_case.py  lc3_unit_test_case_test.py
pylc3/unittests/: lc3_unit_test_case.py  lc3_unit_test_case_test.py
replay/: BinaryStreamReader.cpp  BinaryStreamReader.hpp  CMakeLists.txt  lc3_replay.cpp  lc3_replay.hpp
source/: CMakeLists.txt  version.h.in
source/codegeneration/: template_msvc_api.h.in
source/complx/: CMakeLists.txt  ComplxApp.cpp  ComplxApp.hpp  ComplxFrame.cpp  ComplxFrame.hpp  LoadingOptions.hpp  MemoryView.cpp  MemoryView.hpp
source/complx/builder/: ComplxFrameDecl.fbp
source/complx/data/: Lc3BinaryDisplayData.cpp  Lc3BinaryDisplayData.hpp  MemoryViewBinaryDataRenderer.cpp  MemoryViewBinaryDataRenderer.hpp  MemoryViewDataModel.cpp  MemoryViewDataModel.hpp  MemoryViewInfoDataRenderer.cpp  MemoryViewInfoDataRenderer.hpp  MemoryViewInfoState.hpp  ProcessStatusRegisterProperty.cpp  ProcessStatusRegisterProperty.hpp  PropertyTypes.hpp  RegisterProperty.cpp  RegisterProperty.hpp
source/complx/util/: ValidationHelper.cpp  ValidationHelper.hpp
source/lc3/: CMakeLists.txt
source/lc3/include/: lc3.hpp
source/lc3/source/: ExpressionEvaluator.cpp  lc3.cpp  lc3_assemble.cpp  lc3_debug.cpp  lc3_execute.cpp  lc3_expressions.cpp  lc3_os.cpp  lc3_osv2.cpp  lc3_params.cpp  lc3_parser.cpp  lc3_plugin.cpp  lc3_runner.cpp  lc3_symbol.cpp
source/lc3_replay/: CMakeLists.txt
source/lc3_replay/include/: BinaryStreamReader.hpp  lc3_replay.hpp
source/lc3_replay/source/: BinaryStreamReader.cpp  lc3_replay.cpp
source/lc3as/: CMakeLists.txt  main.cpp
source/lc3edit/: CMakeLists.txt  lc3edit.fbp
source/lc3edit/src/: EditorPanel.hpp  EditorPanelDecl.cpp  EditorPanelDecl.hpp  EditorView.cpp  EditorView.hpp  LC3EditApp.cpp  LC3EditApp.hpp  LC3EditFrameDecl.h  resources.hpp  version.h
source/lc3edit/wxFlatNotebook/: fnb_customize_dlg.cpp  (+2 more)
source/logging/: CMakeLists.txt
source/plugins/: CMakeLists.txt
source/pylc3/: CMakeLists.txt  PyLC3.hpp  pylc3_generator.py
source/tests/: .gitignore  CMakeLists.txt
tests/: CMakeLists.txt  lc3_assemble_test.cpp  lc3_basic_test.cpp  lc3_parser_test.cpp  lc3_plugin_test.cpp  lc3_replay_test.cpp  lc3_revision_2019_test.cpp  lc3_test_test.cpp  plugin_test.cpp
tests/testdata/: allinstrs.asm  devreg.asm  devreg.sym  disassemble.asm  disassemble.sym  simple.asm  simple.hex  simple.sym  simple2.asm  simplesubr.asm  simplesubr.sym  store.asm  store.sym  traps.asm  traps.sym  trapsoutput.txt
(+196 files in other folders)
